plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kh'
version = '0.0.1-SNAPSHOT'
description = 'mvidia erp system'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.0.0")
    implementation("com.oracle.database.jdbc:ojdbc8:23.2.0.0") // 오라클 JDBC 드라이버
    implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3") // 순수 mybatis
    implementation("org.springframework.boot:spring-boot-starter-jdbc:3.5.5") // jdbc를 위한 라이브러리 설정
    implementation("org.springframework.boot:spring-boot-starter-security:3.5.5") // 스프링 시큐리티 (security)
    implementation("com.google.code.gson:gson:2.10.1") // gson 라이브러리
    implementation("com.google.api-client:google-api-client:2.8.0")
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1' // Google API Client Library
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20250404-2.0.0' // Google Calendar API Library
    implementation("com.konghq:unirest-java:3.13.6") // 노션 연동 관련 unirest 라이브러리
    implementation("com.googlecode.json-simple:json-simple:1.1.1") // json 라이브러리
}

tasks.named('test') {
	useJUnitPlatform()
}
